Add ingredients and steps to spaghetti recipe page

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -6,5 +6,23 @@
     </head>
     <body>
         <h1>Spaghetti Recipe</h1>
+        <img src="../images/spaghetti.jpg" alt="an image of spaghetti">
+        <h3>Description</h3>
+        <p>Spaghetti is a classic Italian dish that serves the masses of Italy and America with its delicious flavor. Today we'll be teaching you how to boil noodles and open a jar of Prego sauce. Strap in and put on your favorite apron.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 package of thin spaghetti</li>
+            <li>Salt</li>
+            <li>Water</li>
+            <li>1 12 oz Prego sauce</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Boil the water. Salt to taste.</li>
+            <li>Add the thin spaghetti noodles. Cook for 10 minutes for perfect <em>al dente</em> consistency. Make sure to stir every couple of minutes.</li>
+            <li>Heat the prego sauce in a small sauce pan on low heat.</li>
+            <li>Once the noodles are done, drain the water and leave the noodles in the pot.</li>
+            <li>Add the sauce and mix it with the noodles. It's ready to serve!</li>
+        </ol>
     </body>
 </html>
