--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/spaghetti.html">Spaghetti Recipe</a></li>
+            <li><a href="recipes/ramen.html">Ramen Recipe</a></li>
+            <li><a href="recipes/sandwich.html">Sandwich Recipe</a></li>
+
+        </ul>
     </body>
 </html>
